<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="8dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:contentDescription="@string/app_name"
            android:scaleType="fitCenter"
            android:src="@mipmap/ic_launcher"
            android:layout_gravity="center"/>

        <TextView
            android:src="@drawable/ic_name_long"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:scaleType="fitStart"
            android:paddingLeft="8dp"
            android:tint="@color/colorAccentDark"
            android:text="@string/app_name"
            android:gravity="center|left"
            android:textAlignment="gravity"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Headline"/>

    </LinearLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/etUsernameLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:backgroundTint="@color/colorAccent"
        android:layout_marginTop="16dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/login_dialog_editText_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username"
            android:inputType="text"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginBottom="4dp"/>
    </android.support.design.widget.TextInputLayout>

    <!-- <EditText
        android:id="@+id/login_dialog_editText_username"
        android:inputType="textEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp"
        android:hint="@string/username" /> -->

    <android.support.design.widget.TextInputLayout
        android:id="@+id/etPasswordLayout"
        android:layout_width="match_parent"
        app:backgroundTint="@color/colorAccent"
        android:layout_height="wrap_content"
        app:passwordToggleEnabled="true">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/login_dialog_editText_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:layout_marginTop="4dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginBottom="8dp"/>
    </android.support.design.widget.TextInputLayout>

    <!-- <EditText
        android:id="@+id/login_dialog_editText_password"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="sans-serif"
        android:hint="@string/password"/> -->


    <RadioGroup
        android:id="@+id/login_dialog_usr_privileges"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/setAdmin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:text="@string/admin_label" />

        <RadioButton
            android:id="@+id/setFarmer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/setAdmin"
            android:text="@string/farmer_label" />

    </RadioGroup>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/login_dialog_btn_login"
            android:layout_width="fill_parent"
            android:layout_height="30dp"
            android:background="@null"
            android:clickable="true"
            android:text="@string/login_label"
            android:textColor="@color/colorAccent"
            android:textStyle="bold" />

    </RelativeLayout>
</LinearLayout>
