...
    <string name="toastmsg_nothing_found">No fields found</string>
    <string name="go_back_message">Are you sure you want to go back? Fields not visible on screen will be dismissed</string>
    <string name="add_activity_added">" added"</string>
    <string name="add_activity_pointAt">"point at "</string>
    <string name="add_Activity_YouNeed">"You need "</string>
    <string name="add_activity_needMore">" Points more"</string>
    <string name="word_yes">yes</string>
    <string name="word_no">no</string>
    <string name="add_activity_ActionButtonText">Add a Corner Point at your current position</string>
    <string name="add_activity_NoMorePoints">No more points to delete.</string>
    <string name="add_activity_outsideOffField">The point is not in the field. The point was not added.</string>


...
