<?xml version="1.0" encoding="utf-8"?>

<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:behavior_peekHeight="auto"
    app:layout_behavior="@string/bottom_sheet_behavior"
    android:id="@+id/field_detail_cl">


    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@android:color/background_light"
        android:id="@+id/bottomSheetFoto"
        android:layout_gravity="top"
        android:orientation="vertical">


        <!-- this text will only auto scale in andorid 8, autoscale prior to this release
        is not supported by android and there is no time to implement this by ourselfes -->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/list_item_spacing_half"
            android:paddingLeft="@dimen/list_item_spacing"
            android:paddingRight="@dimen/list_item_spacing"
            android:paddingTop="@dimen/list_item_spacing_half"
            android:autoSizeTextType="uniform"
            android:layout_gravity="left"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:id="@+id/field_detail_name"
            android:text="-name-"/>


        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/spinnerPanel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/text_type"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/list_item_spacing"
                android:text="@string/dialogItem_Location" />

            <TextView
                android:layout_width="0dp"
                android:layout_weight="4"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/list_item_spacing_half"
                android:paddingLeft="@dimen/list_item_spacing"
                android:paddingRight="@dimen/list_item_spacing"
                android:paddingTop="@dimen/list_item_spacing_half"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:id="@+id/field_detail_region"
                android:text="-region-"/>

        </LinearLayout>

        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

                <TextView
                    android:id="@+id/text_type2"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/list_item_spacing"
                    android:text="@string/dialogItem_Type" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="4"
                    android:layout_height="wrap_content"
                    android:paddingBottom="@dimen/list_item_spacing_half"
                    android:paddingLeft="@dimen/list_item_spacing"
                    android:paddingRight="@dimen/list_item_spacing"
                    android:paddingTop="@dimen/list_item_spacing_half"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:id="@+id/field_detail_state"
                    android:text="-state-"/>

        </LinearLayout>


        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/text_type3"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/list_item_spacing"
                android:text="@string/dialogItem_Size" />

            <TextView
                android:layout_width="0dp"
                android:layout_weight="4"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/list_item_spacing_half"
                android:paddingLeft="@dimen/list_item_spacing"
                android:paddingRight="@dimen/list_item_spacing"
                android:paddingTop="@dimen/list_item_spacing_half"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:id="@+id/field_detail_size"
                android:text="-size-"/>
        </LinearLayout>

        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/text_type4"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/list_item_spacing"
                android:text="@string/dialogItem_Owner" />

            <TextView
                android:layout_width="0dp"
                android:layout_weight="4"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/list_item_spacing_half"
                android:paddingLeft="@dimen/list_item_spacing"
                android:paddingRight="@dimen/list_item_spacing"
                android:paddingTop="@dimen/list_item_spacing_half"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:id="@+id/field_detail_policyholder"
                android:text="-name policyholer-"/>
        </LinearLayout>


        <RelativeLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/topPanel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <ImageButton
                android:id="@+id/add_damageField_button"
                android:paddingLeft="@dimen/list_item_spacing"
                android:paddingRight="@dimen/list_item_spacing"
                android:paddingTop="@dimen/list_item_spacing_half"
                android:paddingBottom="16dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toStartOf="@+id/finish_edit_button_agr"
                android:background="@null"
                android:src="@drawable/ic_damage" />

            <ImageButton
                android:id="@+id/finish_edit_button_agr"
                android:paddingLeft="@dimen/list_item_spacing"
                android:paddingRight="@dimen/list_item_spacing"
                android:paddingTop="@dimen/list_item_spacing_half"
                android:paddingBottom="16dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:layout_toStartOf="@id/pick_form_gallery"
                android:src="@drawable/ic_mode_edit_black_24px" />

            <ImageButton
                android:id="@+id/pick_form_gallery"
                android:paddingLeft="@dimen/list_item_spacing"
                android:paddingRight="@dimen/list_item_spacing"
                android:paddingTop="@dimen/list_item_spacing_half"
                android:paddingBottom="16dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentRight="true"
                android:background="@null"
                android:src="@drawable/ic_navigation_black_24px"
                android:text="@string/navigate_Button" />


        </RelativeLayout>


    </LinearLayout>


</android.support.design.widget.CoordinatorLayout>