<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item
        android:id="@+id/action_menu_toggleLoc"
        android:orderInCategory="103"
        android:title="@string/toggleLoc_Button"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_menu_redo"
        android:orderInCategory="102"
        android:title="@string/redo_Button"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_menu_done"
        android:orderInCategory="101"
        android:title="@string/done_Button"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_menu_tutorial"
        android:orderInCategory="2000"
        android:title="@string/help_label"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="never" />

</menu>