...
            android:layout_height="wrap_content"
            android:imeOptions="actionNext"
            android:paddingBottom="@dimen/list_item_spacing_half"
            android:paddingLeft="@dimen/list_item_spacing"
            android:paddingRight="@dimen/list_item_spacing"
            android:paddingTop="@dimen/list_item_spacing_half"
            android:id="@+id/field_detail_name_edit"
            android:text="-name-"/>


        <EditText
            android:id="@+id/field_detail_region_edit"
            android:layout_width="match_parent"
...
                android:layout_toStartOf="@id/edit_finish_button"
                android:src="@drawable/ic_delete_forever_black_24px"
                android:background="@null"
                android:text="@string/edit_field_delete_button"/>

            <ImageButton
                android:id="@+id/add_Photo_Button"
                android:paddingLeft="@dimen/list_item_spacing"
                android:paddingRight="@dimen/list_item_spacing"
                android:paddingTop="@dimen/list_item_spacing_half"
                android:paddingBottom="16dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...
